--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   cloud_firestore: ^5.6.12
   url_launcher: ^6.2.4
   in_app_update: ^4.2.5
+  collection: ^1.19.1
   # Removed due to migration away from Google Maps
   # google_maps_flutter: ^2.5.3
 
